2008-09-29 Ingo Renner  <ingo@typo3.org>

	* !!! changed the way the configuration for community applications is build, their names now start with lower case letters like anything else, too
	* made the profile image rendering configurable through TS

2008-09-29 Frank Naegler  <typo3@naegler.net>

	* move function isFriendOfCurrentlyLoggedInUser from tx_community_model_UserGateway to tx_community_AccessManager

2008-09-22 Frank Naegler  <typo3@naegler.net>

	* added member invite function for group editing settings
	* added new function isFriendOfCurrentlyLoggedInUser to the tx_community_model_UserGateway
	* bugfix: initialize groupGateway in tx_community_controller_ListGroupsApplication

2008-09-21 Ingo Renner  <ingo@typo3.org>

	* added a way to exclude community application from being listed in the community plugin's flexform
	* made the application manager available in global scope when the community plugin is executed
	* removed includes of the application manager as it is loaded with the community FE plugin
	* changed existing community applications to use the global instance of the application manager
	* !!! changed API of addLoop() in the template engine, now requires a marker name as second parameter for the looped variable
	* !!! renamed method in template engine, getMarkersFromSupart() is now named getMarkersFromTemplate()
	* added a new community application (UserList) to list users
	* added rendering of search results using the new UserList application

2008-09-19 Ingo Renner  <ingo@typo3.org>

	* added initial scaffolding for a criteria class to work with conditions for selecting records in an object oriented way
	* added initial code for the user profile search feature
	* added "compilation" of a where clause from search parameters in the search application, depending on TS configuration

2008-09-18 Ingo Renner  <ingo@typo3.org>

	* added a quick search input field widget
	* added basic scaffolding for the search application